ventana de login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,22 @@
-<app-windows>
-    <div class="bg-grey">
-        Juan
+<app-windows class="">
+    <div class="userOption bg-grey p-2 flex justify-between items-center mb-2">
+        <span>Juan</span>
+        <app-simplebtn />
+    </div>
+    <div class="bg-grey p-2 flex justify-between items-center mb-2">
+        <span>Juan</span>
+        <app-simplebtn />
+    </div>
+    <div class="bg-grey p-2 flex justify-between items-center mb-2">
+        <span>Juan</span>
+        <app-simplebtn />
+    </div>
+    <div class="bg-grey p-2 flex justify-between items-center mb-2">
+        <span>Juan</span>
+        <app-simplebtn />
+    </div>
+    <div class="bg-grey p-2 flex justify-between items-center mb-2">
+        <span>Juan</span>
+        <app-simplebtn />
     </div>
 </app-windows>
