--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,26 @@
-<app-windows class="">
-    <div class="userOption bg-grey p-2 flex justify-between items-center mb-2">
-        <span>Juan</span>
-        <app-simplebtn />
-    </div>
-    <div class="bg-grey p-2 flex justify-between items-center mb-2">
-        <span>Juan</span>
-        <app-simplebtn />
-    </div>
-    <div class="bg-grey p-2 flex justify-between items-center mb-2">
-        <span>Juan</span>
-        <app-simplebtn />
-    </div>
-    <div class="bg-grey p-2 flex justify-between items-center mb-2">
-        <span>Juan</span>
-        <app-simplebtn />
-    </div>
-    <div class="bg-grey p-2 flex justify-between items-center mb-2">
-        <span>Juan</span>
-        <app-simplebtn />
-    </div>
-</app-windows>
+<div class="w-full h-full bg-green flex items-center justify-center">
+    <app-windows class="">
+        @if (onSelectUsser) {
+        <div class="bg-grey p-2 flex justify-between items-center mb-2">
+            <span>Juan</span>
+            <app-simplebtn />
+        </div>
+        <div class="bg-grey p-2 flex justify-between items-center mb-2">
+            <span>Juan</span>
+            <app-simplebtn />
+        </div>
+        <div class="bg-grey p-2 flex justify-between items-center mb-2">
+            <span>Juan</span>
+            <app-simplebtn />
+        </div>
+        <div class="bg-grey p-2 flex justify-between items-center mb-2">
+            <span>Juan</span>
+            <app-simplebtn />
+        </div>
+        <div class="bg-grey p-2 flex justify-between items-center mb-2">
+            <span>Juan</span>
+            <app-simplebtn />
+        </div>
+        }
+    </app-windows>
+</div>
