--- a/src/app/shared/components/windows/windows.component.html
+++ b/src/app/shared/components/windows/windows.component.html
@@ -3,7 +3,8 @@
         <div class="w-full text-center">
             <h2>Title</h2>
         </div>
-        <span class="hover:cursor-pointer bg-grey w-6 h-6 grid place-items-center text-black">x</span>
+        <span
+            class="hover:cursor-pointer bg-grey w-5 h-5 grid place-items-center text-black border-2 border-t-white border-l-white border-b-darkGrey border-r-darkGrey">x</span>
     </div>
     <div class="p-2">
         <ng-content />
