--- a/src/app/shared/components/windows/windows.component.html
+++ b/src/app/shared/components/windows/windows.component.html
@@ -1,10 +1,10 @@
-<div class="min-w-52 min-h-52 w-fit rounded-sm bg-white">
+<div class="min-w-64 min-h-52 w-fit rounded-sm bg-white scale-150">
     <div class="h-8 bg-blue text-white flex justify-between items-center p-1">
         <div class="w-full text-center">
             <h2>Title</h2>
         </div>
         <span
-            class="hover:cursor-pointer bg-grey w-5 h-5 grid place-items-center text-black border-2 border-t-white border-l-white border-b-darkGrey border-r-darkGrey">x</span>
+            class="hover:cursor-pointer bg-grey w-5 h-5 flex justify-center items-center text-black border-2 border-t-white border-l-white border-b-darkGrey border-r-darkGrey">x</span>
     </div>
     <div class="p-2">
         <ng-content />
