chat profile cards, user list

--- a/src/app/shared/components/windows/windows.component.html
+++ b/src/app/shared/components/windows/windows.component.html
@@ -1,4 +1,4 @@
-<div class="min-w-64 min-h-52 w-fit rounded-sm bg-white scale-150">
+<div class="{{size_classes}} rounded-sm bg-white scale-150 border-2 border-blue">
     <div class="h-8 bg-blue text-white flex justify-between items-center p-1">
         <div class="w-full text-center">
             <h2>{{ title }}</h2>
