Add new models and components for chat conversation

--- a/src/app/shared/components/chat/chat.component.html
+++ b/src/app/shared/components/chat/chat.component.html
@@ -1,4 +1,4 @@
-<app-windows title="PingMe" size_classes="h-[250px] w-[250px]">
+<app-windows title="PingMe" size_classes="h-fit w-[250px]">
   <div *ngIf="chatting; else user_list">
     <app-chat-conversation />
   </div>
