--- a/src/app/shared/components/windows/windows.component.html
+++ b/src/app/shared/components/windows/windows.component.html
@@ -1,10 +1,10 @@
-<div class="{{size_classes}} rounded-sm bg-white scale-150 border-2 border-blue">
-    <div class="h-8 bg-blue text-white flex justify-between items-center p-1">
+<div class="{{size_classes}} min-h-[312px] rounded-sm bg-white border-2 border-blue">
+    <div class="h-12 bg-blue text-white flex justify-between items-center p-1">
         <div class="w-full text-center">
             <h2>{{ title }}</h2>
         </div>
         <span
-            class="hover:cursor-pointer bg-grey w-5 h-5 flex justify-center items-center text-black border-2 border-t-white border-l-white border-b-darkGrey border-r-darkGrey">
+            class="hover:cursor-pointer bg-grey w-9 h-9 flex justify-center items-center text-black border-2 border-t-white border-l-white border-b-darkGrey border-r-darkGrey">
             <img [src]="closeIcon" alt="close" />
         </span>
     </div>
