--- a/src/app/pages/day-one/day-one.component.html
+++ b/src/app/pages/day-one/day-one.component.html
@@ -1,18 +1,23 @@
-<div class="h-screen w-screen bg-green">
-    <div class="desktop">
-        <div class="winsContainer">
-            <app-windows [title]="'Virtual studio'" class="vscode min-w-96 max-w-96 w-96">
-                <div>{{ currentText }}</div>
-                <div class="place-self-end h-6 bg-grey" (keydown)="detectKey($event)" tabindex="0"></div>
-                <div class="w-full h-4 bg-blue absolute left-0 bottom-0 flex ali-center">
-                    Errors: {{ errors }}
-                </div>
-            </app-windows>
-            <div class="winsContainer2">
-                <app-windows [title]="'Employees performance tracker'"></app-windows>
-                <app-windows [title]="'Todo App'"></app-windows>
+<app-window-manager [windowPlacement]="windowPlacement">
+    <div pomodorobar>
+        POMODORO
+    </div>
+    <div leftPanel>
+        <app-windows [title]="'Virtual studio'" size_classes="vscode min-w-[552px] max-w-[552px] w-[552px] relative">
+            <div>{{ currentText }}</div>
+            <div class="place-self-end h-6 bg-grey" (keydown)="detectKey($event)" tabindex="0"></div>
+            <div class="w-full h-8 px-1 bg-blue absolute left-0 bottom-0 flex ali-center text-white">
+                Errors: {{ errors }}
             </div>
-        </div>
+        </app-windows>
+    </div>
+    <div topRightPanel>
+        <app-windows [title]="'Employees performance tracker'" size_classes="w-[500px]"></app-windows>
+    </div>
+    <div bottomRightPanel>
+        <app-windows [title]="'Todo App'"></app-windows>
+    </div>
+    <div toolbar>
         <app-toolbar class="" />
     </div>
-</div>
+</app-window-manager>
