--- a/src/app/pages/day-one/day-one.component.html
+++ b/src/app/pages/day-one/day-one.component.html
@@ -5,7 +5,7 @@
     <div leftPanel>
         <app-windows [title]="'Virtual studio'" size_classes="vscode min-w-[552px] max-w-[552px] w-[552px] relative">
             <div>{{ currentText }}</div>
-            <div class="place-self-end h-6 bg-grey" (keydown)="detectKey($event)" tabindex="0"></div>
+            <div class=" h-6 bg-grey" (keydown)="detectKey($event)" tabindex="0"></div>
             <div class="w-full h-8 px-1 bg-blue absolute left-0 bottom-0 flex ali-center text-white">
                 Errors: {{ errors }}
             </div>
