agregadas un par de cosas en el dayOne

--- a/src/app/pages/day-one/day-one.component.html
+++ b/src/app/pages/day-one/day-one.component.html
@@ -4,8 +4,10 @@
     </div>
     <div leftPanel>
         <app-windows [title]="'Virtual studio'" size_classes="vscode min-w-[552px] max-w-[552px] w-[552px] relative">
-            <div>{{ currentText }}</div>
-            <div class=" h-6 bg-grey" (keydown)="detectKey($event)" tabindex="0"></div>
+            <div class="">{{ currentText }}</div>
+            <div class="absolute w-full left-0 bottom-8 h-7 bg-grey cursor-pointer" (keydown)="detectKey($event)" tabindex="0">
+                -> Click here and start write
+            </div>
             <div class="w-full h-8 px-1 bg-blue absolute left-0 bottom-0 flex ali-center text-white">
                 Errors: {{ errors }}
             </div>
