--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,3 +1,4 @@
-<div class="flex h-12 bg-grey">
-    Toolbar
+<div class="flex justify-end p-2 bg-grey gap-2">
+    <span class="m-auto">Amazing Banck (c) 1997</span>
+    <app-simplebtn [text]="'Messages'" />
 </div>
