--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
 <div class="flex justify-end p-2 bg-grey gap-2">
-    <span class="m-auto">Amazing Banck (c) 1997</span>
+    <span class="m-auto">Amazing Bank (c) 1997</span>
     <app-simplebtn [text]="'Messages'" />
 </div>
