--- a/src/app/pages/day-one/day-one.component.html
+++ b/src/app/pages/day-one/day-one.component.html
@@ -3,23 +3,15 @@
         POMODORO
     </div>
     <div leftPanel>
-        <app-windows [title]="'Virtual studio'" size_classes="vscode min-w-[552px] max-w-[552px] w-[552px] relative">
-            <div class="">{{ currentText }}</div>
-            <div class="absolute w-full left-0 bottom-8 h-7 bg-grey cursor-pointer" (keydown)="detectKey($event)" tabindex="0">
-                -> Click here and start write
-            </div>
-            <div class="w-full h-8 px-1 bg-blue absolute left-0 bottom-0 flex ali-center text-white">
-                Errors: {{ errors }}
-            </div>
-        </app-windows>
+        <app-virtual-studio />
     </div>
     <div topRightPanel>
-        <app-windows [title]="'Employees performance tracker'" size_classes="w-[500px]"></app-windows>
+        <app-performance-tracker />
     </div>
     <div bottomRightPanel>
-        <app-windows [title]="'Todo App'"></app-windows>
+        <app-todo-app />
     </div>
     <div toolbar>
-        <app-toolbar class="" />
+        <app-toolbar />
     </div>
 </app-window-manager>
