--- a/src/app/shared/components/windows/windows.component.html
+++ b/src/app/shared/components/windows/windows.component.html
@@ -1,5 +1,5 @@
-<div class="{{size_classes}} min-h-[312px] rounded-sm bg-white border-2 border-blue">
-    <div class="h-12 bg-blue text-white flex justify-between items-center p-1">
+<div class="{{size_classes}} min-h-[200px] rounded-sm bg-white border-2 border-blue">
+    <div class=" bg-blue text-white flex justify-between items-center p-1">
         <div class="w-full text-center">
             <h2>{{ title }}</h2>
         </div>
