day one connected

--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,4 +1,4 @@
-<app-window-manager [windowPlacement]="windowPlacement">
+<app-window-manager [windowPlacement]="windowPlacement" [noPomodoro]="true">
     <div centerPanel>
         <app-windows [title]="winTitle" class="flex">
             @if (onSelectUser) {
