--- a/src/app/shared/components/start-day/start-day.component.html
+++ b/src/app/shared/components/start-day/start-day.component.html
@@ -1,5 +1,5 @@
 <app-window-manager [windowPlacement]="windowPlacement" [noPomodoro]="true">
   <div centerPanel>
-    <div class="hover:underline hover:cursor-pointer" (click)="handleClick()">START GAME</div>
+    <div class="hover:underline hover:cursor-pointer animate-blinkTransparent text-2xl" (click)="handleClick()">START GAME</div>
   </div>
 </app-window-manager>
