--- a/src/app/shared/components/game-manager/game-manager.component.html
+++ b/src/app/shared/components/game-manager/game-manager.component.html
@@ -1,5 +1,10 @@
 @if (!isLoggedIn()) {
-  <app-login></app-login>
+<app-login></app-login>
 } @else {
+<div class="relative">
   <ng-content></ng-content>
+  <div *ngIf="isChatActive()" class="text-xl flex justify-center items-center bg-black bg-opacity-80 h-screen w-screen absolute top-0 left-0">
+    <app-chat></app-chat>
+  </div>
+</div>
 }
