--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -6,5 +6,8 @@
   @case (getDayOne()) {
   <app-day-one></app-day-one>
   }
+  @case (getDayTwo()) {
+   <app-day-two></app-day-two> 
+  }
   }
 </app-game-manager>
