--- a/src/app/shared/components/window-manager/window-manager.component.html
+++ b/src/app/shared/components/window-manager/window-manager.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </div>
-  <div *ngIf="isFourCornersPlacement()" class="flex justify-around h-full bg-debug">
+  <div *ngIf="isFourCornersPlacement()" class="flex justify-around h-full">
     <div class="flex flex-col gap-8 justify-center">
       <ng-content select="[topLeftCorner]"></ng-content>
       <ng-content select="[bottomLeftCorner]"></ng-content>
