--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -4,7 +4,7 @@
             @if (onSelectUser) {
             @for (user of userInfos; track user; let i = $index; ) {
             <div class="mb-2 h-12 px-2 w-96 bg-grey group flex justify-between items-center">
-                <span class="bg-yellow h-9 w-10 grid place-items-center p-2">{{user.icon}}</span>
+                <img [src]="user.icon" alt="">
                 <span>{{user.name}}</span>
                 <div class="w-24 flex justify-end">
                     <app-simplebtn (click)="login(user.name)" [text]="'Login'" class="hidden group-hover:flex" />
