--- a/src/app/shared/performance-tracker/performance-tracker.component.html
+++ b/src/app/shared/performance-tracker/performance-tracker.component.html
@@ -1,11 +1,11 @@
 <app-windows [title]="'PerformanceTracker'" [size_classes]="'w-[470px]'">
     @for (user of userInfos; track $index) {
     <div class="flex justify-between my-4">
-        <span class="bg-yellow mr-4 h-9 w-10 grid place-items-center p-2">{{user.icon}}</span>
+        <img [src]="user.info.icon" alt="">
         <div class="felx w-full">
-            <span class="self-start">{{user.name}}</span>
+            <span class="self-start">{{user.info.name}}</span>
         </div>
-        <span>user.points</span>
+        <span>{{user.status.points}}</span>
     </div>
     }
 </app-windows>
