--- a/src/app/shared/components/chat-message/chat-message.component.html
+++ b/src/app/shared/components/chat-message/chat-message.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col gap-y-1" [ngClass]="{'items-end': message.me, 'items-start': !message.me}">
   <div class="flex gap-1 items-center">
-    <div *ngIf="message.from_name != ''" class="w-6 h-6 bg-yellow flex justify-center items-center">{{message.from_icon}}</div>
+    <div *ngIf="message.from_name != ''" class="w-6 h-6 bg-yellow flex justify-center items-center">
+      <img [src]="message.from_icon"/>
+    </div>
     <div>{{message.from_name}}</div>
   </div>
   <div [ngClass]="{'animate-blinkTransparent': typing}">
