--- a/src/app/shared/todo-app/todo-app.component.html
+++ b/src/app/shared/todo-app/todo-app.component.html
@@ -1,5 +1,5 @@
 <app-windows [title]="'ToDoApp'" size_classes="w-[600px]">
-    @for (todo of toDos; track todo; let i = $index) {
-        <li class="ml-5" [ngClass]="{'bg-ok': todo.completed}">{{todo.title}}</li>
+    @for (todo of getTodos(); track todo; let i = $index) {
+        <li class="ml-5" [ngClass]="{'bg-ok': todo.completed}">{{todo.description}}</li>
     }
 </app-windows>
